# PRSM

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .env.testnet  .gitignore  .kilocodemodes  APPLE_EXECUTIVE_ONE_PAGER.md  ARCHITECTURE_DEPENDENCIES.md  AUDIT_READY_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  DISTRIBUTED_RESOURCE_ARCHITECTURE.md  Diffing.md  Dockerfile  Dockerfile.performance-collector  GITHUB_CLEANUP_SUMMARY.md  INVESTOR_MATERIALS.md  INVESTOR_QUICKSTART.md  Institutional_Dynamics.rtf  Kobayashi_Maru.rtf  LICENSE  MANIFEST.in  MARKETPLACE_API_CONSOLIDATION_SUMMARY.md  MARKETPLACE_API_FINAL_CONSOLIDATION.md  MARKETPLACE_CONSOLIDATION_SUMMARY.md  Makefile  NWTN_COMPLETION_REPORT.md  NWTN_Critical_Analysis_and_Improvement_Recommendations.md  NWTN_Meta_Reasoning_Implementation_Roadmap.md  NWTN_TEST_PROMPTS.md  ORGANIZATIONAL_STRUCTURE.md  Outstanding_Items.md  PRE_FUNDING_OPTIMIZATION_ROADMAP.md  PRE_PUSH_AUDIT_SUMMARY.md  PRISMATICA_MOONSHOT_STRATEGY.md  (+62 more)
.claude/: settings.local.json
.github/: CURATED_GOOD_FIRST_ISSUES.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
Adversarial_Testing/: TECHNICAL_DUE_DILIGENCE_REPORT-PRSM_V1.md  technical-roadmap_v1.md  technical-roadmap_v2.md
NWTN_CHECKPOINTS/: checkpoint_metadata.json
PRSM_ui_mockup/: NAVIGATION_FIX_SUMMARY.md  TECHNICAL_ARCHITECTURE_TRANSLATION_SMS.md  demo_integration.html  index.html  security_status_indicators.html  test_data_work_navigation.html  test_dynamic_results.html  test_integration.html  test_websocket.html
ai-concierge/: .env.example  .env.production  .gitignore  API_Keys.example.txt  NETLIFY_DEPLOYMENT.md  README.md  jest.config.js  jest.setup.js  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
alembic/: env.py
archive/: ARCHIVE_SUMMARY 2.md  NATIVE_100K_NWTN_SUMMARY.md  NWTN_ENHANCEMENT_ROADMAP.md  NWTN_OVERNIGHT_RESULTS_SUMMARY.md  REPOSITORY_CLEANUP_AUDIT_SUMMARY.md  REPOSITORY_CLEANUP_COMPLETE.md  abductive_reasoning_engine.py  causal_reasoning_engine.py  counterfactual_reasoning_engine.py  deductive_reasoning_engine.py  demo_nwtn_interface.py  fix_pdf_schema.py  inductive_reasoning_engine.py  pdf_corpus_upgrade_summary.py  test_actual_pipeline.py  test_batch_pdf_download.py  test_comprehensive_grounded_response.py  test_enhanced_pipeline.py  test_grounded_synthesis.py  test_pdf_processing.py
audit_reports/: quick_validation_report_20250701_133858.json  quick_validation_report_20250701_133921.json  quick_validation_report_20250701_133942.json  quick_validation_report_20250701_133959.json  quick_validation_report_20250701_150029.json  quick_validation_report_20250701_150314.json  quick_validation_report_20250701_150436.json  quick_validation_report_20250701_152548.json
audits/: AUDIT_PLAN.md  README.md
benchmarks/: performance_benchmarks 2.py
completed_tests/: nwtn_real_world_challenge_test.py  process_existing_nwtn_results.py  quick_claude_test.py  quick_validation_test.py  simple_mathematics_test.py  simple_physics_test.py  test_claude_api_direct.py  test_embedding_pipeline.py  test_empirical_constants_integration.py  test_fixed_nwtn_interface.py  test_full_nwtn_system.py  test_physics_integration.py  test_semantic_search.py  test_voicebox_integration.py  test_world_model_basic.py  test_world_model_integration.py
compliance-evidence/: compliance_test_report_20250701_164043.json  evidence_manifest_20250701_164043.json
compliance-evidence-vault/: collection_manifest_20250701_171940.json  tamper_evident_seal_20250701_171940.json
config/: alertmanager.yml  api_keys.env.example  loki-config.yml  metrics-exporter.yml  node_config.json.template  observability-stack 2.yml  observability-stack.yml  performance-collector.yml  prometheus-enhanced.yml  prometheus.yml  promtail-config.yml  redis.conf  secure.env.template
contracts/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  deployment-config.json  hardhat.config.js  package-lock.json  package.json  slither.config.json
dashboard/: dashboard_test.py  real_time_monitoring_dashboard.py
demos/: DEMO_OUTPUTS 2.md  DEMO_OUTPUTS.md  INVESTOR_DEMO.md  README.md  advanced_agent_orchestration_demo.py  check_requirements.py  enhanced_p2p_ai_demo.py  hybrid_architecture_demo.py  (+6 more)
lite_browser/: ARCHITECTURE.md  CMakeLists.txt  GETTING_STARTED.md  README.md  install.sh  lite_browser  prsm_browser
lite_browser/scripts/: build.sh  install_deps.sh
lite_browser/src/lite_browser/: lite_browser_main.cc
lite_browser/src/lite_browser/core/: browser_main.cc  browser_main.h
lite_browser/src/lite_browser/ftns/: earnings_tracker.cc  earnings_tracker.h
lite_browser/src/lite_browser/onboarding/: first_run_setup.cc  first_run_setup.h
lite_browser/src/lite_browser/protocol_handlers/: collab_protocol_handler.cc  collab_protocol_handler.h  lite_protocol_handler.cc  lite_protocol_handler.h  shard_protocol_handler.cc  shard_protocol_handler.h
lite_browser/src/prsm_browser/core/: browser_main.cc
lite_browser/src/prsm_browser/protocol_handlers/: prsm_protocol_handler.cc  prsm_protocol_handler.h
prsm/compute/wasm/source/executor/: Cargo.toml
prsm/compute/wasm/source/executor/src/: main.rs
prsm_browser/: CMakeLists.txt  README.md
prsm_browser/scripts/: install_deps.sh  run_dev.sh
prsm_browser/src/prsm_browser/: prsm_browser_main.cc
prsm_browser/src/prsm_browser/core/: browser_main.h
sdks/python/: README.md  pyproject.toml  setup.py
sdks/python/examples/: basic_usage.py  cost_management.py  data_visualization_examples.py  marketplace.py  ml_model_analysis.py  streaming.py  tools.py
sdks/python/examples/production/: docker_deployment.py  fastapi_integration.py
sdks/python/examples/scientific/: research_paper_analysis.py
sdks/python/prsm_sdk/: __init__.py  __version__.py  auth.py  client.py  compute.py  exceptions.py  ftns.py  governance.py  marketplace.py  models.py  storage.py  tools.py  websocket.py
sdks/python/tests/: test_client.py  test_integration.py  test_models.py
(+5922 files in other folders)
