# PRSM - Protocol for Recursive Scientific Modeling
# Modern Python packaging configuration

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prsm-network"
version = "0.4.0"
description = "Protocol for Recursive Scientific Modeling - A decentralized AI-powered scientific research platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PRSM Team", email = "team@prsm.org"}
]
maintainers = [
    {name = "PRSM Team", email = "team@prsm.org"}
]
keywords = [
    "scientific-modeling",
    "ai",
    "decentralized",
    "p2p",
    "research",
    "federation",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    # Core Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    
    # Database & Storage
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    
    # Logging & CLI
    "structlog>=23.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "simple-term-menu>=1.6.0",
    "python-dotenv>=1.0.0",
    
    # HTTP & Networking
    "httpx>=0.25.0",
    "websockets>=12.0",
    
    # Security
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "passlib>=1.7.4",
    
    # Monitoring & Metrics
    "prometheus-client>=0.19.0",

    # Dashboard
    "streamlit>=1.28.0",

    "numpy>=1.24.0",
    
    # Async file I/O (required by IPFS client)
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "coverage[toml]>=7.0.0",
    
    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    
    # Security
    "bandit>=1.7.0",
    "safety>=2.3.0",
    
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    
    # Build & Release
    "build>=1.0.0",
    "twine>=4.0.0",
    "setuptools-scm>=8.0.0",
]

ml = [
    # Machine Learning
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
]

blockchain = [
    # Ethereum / Polygon Web3 integration
    "web3>=6.0.0",
    "eth-account>=0.9.0",
    "hexbytes>=0.3.0",
]

vectorstore = [
    # Milvus (self-hosted or Zilliz cloud)
    "pymilvus>=2.3.0",
    # Qdrant (self-hosted or cloud)
    "qdrant-client>=1.7.0",
    # Pinecone (cloud only)
    "pinecone-client>=3.0.0",
]

gpu = [
    # GPU monitoring and detection (optional - for GPU-equipped systems)
    "nvidia-ml-py3>=12.0.0",
    "GPUtil>=1.4.0",
]

distillation = [
    # 8-bit quantization for large teacher models
    "bitsandbytes>=0.41.0",
    # device_map="auto" for model loading
    "accelerate>=0.24.0",
]

bittorrent = [
    # BitTorrent support for P2P file distribution
    "libtorrent>=2.0.9",
    "bencodepy>=4.0.0",
]

server = [
    # Full API server dependencies (optional routers)
    "bleach>=6.0.0",
    "psutil>=5.9.0",
    "jinja2>=3.1.0",
    "greenlet>=3.0.0",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
]

mcp = [
    # MCP server for AI agent integration
    "fastmcp>=2.0.0",
]

all = [
    "prsm[dev,ml,blockchain,vectorstore,gpu,distillation,bittorrent,server,mcp]",
]

[project.scripts]
prsm = "prsm.cli:main"

[project.urls]
Homepage = "https://github.com/Ryno2390/PRSM"
Documentation = "https://prsm.readthedocs.io"
Repository = "https://github.com/Ryno2390/PRSM.git"
Issues = "https://github.com/Ryno2390/PRSM/issues"
Changelog = "https://github.com/Ryno2390/PRSM/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["prsm*"]
exclude = [
    "prsm.compute.nwtn.corpus*",
    "prsm.compute.nwtn.processed_corpus*",
    "prsm.compute.nwtn.logs*",
    "tests*",
    "examples_and_demos*",
    "build*",
    "dist*",
    "contracts*",
    "sdks*",
    "docs*",
    "scripts*",
    "planning*",
    "docker*",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
prsm = ["*.py", "*/*.py", "*/*/*.py", "py.typed", "skills/*.yaml", "ui_mockup/*.html", "ui_mockup/css/*.css", "ui_mockup/js/*.js", "ui_mockup/assets/*"]

[tool.setuptools.exclude-package-data]
"*" = [
    "corpus/*", "processed_corpus/*", "logs/*",
    "*.db", "*.sqlite", "*.log", "*.jsonl",
    "__pycache__/*",
]

# === Testing Configuration ===
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=prsm",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "performance: Performance tests",
    "slow: Slow running tests",
    "network: Tests requiring network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["prsm"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.paths]
source = ["prsm"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true

# === Code Quality Configuration ===
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".git", ".hg", ".mypy_cache", ".tox", ".venv", "_build", "buck-out", "build", "dist", "migrations"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "ARG001", # unused function argument
]
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001", "S101"]

# === Changelog Configuration (git-cliff) ===
[tool.git-cliff.changelog]
header = """
# Changelog\n
All notable changes to this project will be documented in this file.\n
"""
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
            {% if commit.breaking %}[**breaking**] {% endif %}\
            {{ commit.message | upper_first }}\
            {% if commit.github.username %} by @{{ commit.github.username }}{%- endif %}\
    {% endfor %}
{% endfor %}\n
"""
trim = true
footer = """
<!-- generated by git-cliff -->
"""

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_preprocessors = [
    { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "([#${2}](https://github.com/PRSM-org/PRSM/issues/${2}))" },
]
commit_parsers = [
    { message = "^feat", group = "Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^perf", group = "Performance" },
    { message = "^refactor", group = "Refactor" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Testing" },
    { message = "^chore\\(release\\): prepare for", skip = true },
    { message = "^chore\\(release\\): release version", skip = true },
    { message = "^chore\\(deps\\)", group = "Dependencies" },
    { message = "^chore\\(pr\\)", skip = true },
    { message = "^chore\\(pull\\)", skip = true },
    { message = "^chore|^ci", group = "Miscellaneous Tasks" },
    { body = ".*security", group = "Security" },
]
protect_breaking_commits = false
filter_commits = false
tag_pattern = "v[0-9]*"
skip_tags = "v0.1.0-beta.1"
ignore_tags = ""
topo_order = false
sort_commits = "oldest"

# === Bandit Security Configuration ===
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]

# === Safety Configuration ===
[tool.safety]
ignore = []
