[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prsm-python-sdk"
description = "Official Python SDK for PRSM (Protocol for Recursive Scientific Modeling)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PRSM Development Team", email = "dev@prsm.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0", 
    "websockets>=11.0.0",
    "cryptography>=41.0.0",
]
dynamic = ["version"]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/PRSM-AI/PRSM"
"Bug Tracker" = "https://github.com/PRSM-AI/PRSM/issues"
"Documentation" = "https://docs.prsm.ai/python-sdk"
"Source Code" = "https://github.com/PRSM-AI/PRSM/tree/main/sdks/python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.scripts]
prsm = "prsm_sdk.cli:main"

[tool.setuptools.dynamic]
version = {attr = "prsm_sdk.__version__"}

[tool.setuptools.packages.find]
include = ["prsm_sdk*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true