[package]
name = "prsm-wasm-executor"
version = "0.1.0"
edition = "2021"
description = "PRSM WASM executor — interprets InstructionManifest against tabular data inside a Wasmtime sandbox"
license = "MIT"

[[bin]]
name = "prsm_executor"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Optimize for size — produced .wasm is shipped in the wheel, not
# performance-critical, and smaller = faster wire transit + load.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
